# sune

./: README.md  nuxt.config.ts  package-lock.json  package.json
app/assets/styles/: global.css
app/components/: Avatar.vue
app/layouts/: default.vue
app/types/: avatarstatus.d.ts  tiledata.d.ts  userStatus.d.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/icons/: icon.icns
src-tauri/src/: main.rs
src/components/: Number.vue  Text.vue  Tile.vue
src/layouts/: default.vue
src/pages/: index.vue
src/types/: tiledata.d.ts
